--- a/src/Components/Admin/Admin.css
+++ b/src/Components/Admin/Admin.css
@@ -1,4 +1,23 @@
-.adminpage{
-    border-bottom: 1.5px gray solid;
-    padding:0 5px;
+.admin-style {
+    display: grid;
+    grid-template-columns: 15% 85%;
+}
+
+.admin-style .nav-admin {
+    background-color: #f8b7cd;
+    color: white;
+    font-size: 25px;
+}
+
+.admin-style #go-homepage {
+    font-size: 25px;
+    padding: 40px;
+}
+
+.admin-style .title-page-admin {
+    padding: 0;
+    margin: 0;
+    border-bottom: 1px solid black;
+    font-size: 40px;
+    padding: 20px;
 }
