--- a/src/Components/Admin/Admin.css
+++ b/src/Components/Admin/Admin.css
@@ -7,7 +7,7 @@
 .admin-style .nav-admin {
     background-color: #1e282c;
     font-size: 25px;
-    height: 100%;
+    height: 100vh;
 }
 
 .admin-style #go-homepage {
