--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -60,11 +60,9 @@
   }
   
   form.newsletter input[type="text"],
-  form.newsletter input[type="submit"] {
-    float: left;
+  form.newsletter button {
     height: 33px;
     padding: 5px;
-    width: 75%;
     font-size: 13px;
     border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -73,12 +71,7 @@
     color: #fff;
   }
   
-  form.newsletter input[type="submit"] {
-    float: right;
-    width: 23%;
-  }
-  
-  form.newsletter input[type="submit"]:hover {
+  form.newsletter button:hover {
     color: #f7544a;
   }
   
